--- a/01_introduction/introduction-cn.html
+++ b/01_introduction/introduction-cn.html
@@ -30,7 +30,7 @@
 				<div class="row">
 
 					<div class="col-block col-md-auto resume-picture-holder text-center text-md-start">
-						<img class="picture" src="../img/zpcsquare.jpg" alt="faild loading image">
+						<img class="picture" src="../img/zpcsquare.JPG" alt="faild loading image">
 					</div><!--//col-->
 
 					<div class="col">
