--- a/01_introduction/introduction-cn.html
+++ b/01_introduction/introduction-cn.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="chinese"> 
+<html lang="zh-CN"> 
 <head>
     <title>Zpc - About Me</title>
     
@@ -45,8 +45,9 @@
 							</div><!--//secondary-info-->
 							<div class="secondary-info col-auto mt-2">
 								<ul class="resume-social list-unstyled">
-									<li class="mb-3"><a class="text-link" href="https://github.com/zpcxts"><span class="fa-container text-center me-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/zpcxts</a></li>
-									<li><a class="text-link" href="https://zpcxts.github.io/zpc.github.io/"><span class="fa-container text-center me-2"><i class="fas fa-globe"></i></span>zpc homepage</a></li>
+									<li class="mb-3"><a class="text-link" href="https://github.com/zpcxts"><span class="fa-container text-center me-2"><i class="fab fa-github fa-fw"></i></span>zpc的Github</a></li>
+									<li class="mb-3"><a class="text-link" href="https://zpcxts.github.io/zpc.github.io/"><span class="fa-container text-center me-2"><i class="fas fa-globe"></i></span>zpc的homepage</a></li>
+									<li><a class="text-link" href="http://org.duo.pub/"><span class="fa-container text-center me-2"><i class="fa-solid fa-star-and-crescent"></i></span>日常烤肉社团</a></li>
 								</ul>
 							</div>
 						</div><!--//row-->
@@ -78,6 +79,7 @@
 											</div><!--//row-->
 											<div class="resume-position-time">2022 - 2024</div>
 										</div><!--//resume-timeline-item-header-->
+										<p>三位老师帮助我完成了硕士阶段的研究：吉高淳夫准教授指导我处理视觉信息和图像方面的方法。浅野文彦准教授指导我机器人控制相关的知识。冈田将吾准教授指导我多模态信息融合处理相关的问题，以及协助我搭建了基于transformer的深度神经网络。</p>
 										<div class="resume-timeline-item-desc">
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">项目:</h4>
 											<ol>
@@ -89,10 +91,10 @@
 											</ol>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">论文:</h4>
 											<ol>
-												<li>Asano Fumihiko, Pengcheng Zeng, Ziyu Zhang, Cong Yan,"Methods of motion control and instantaneous gait analysis for safe walking on long uneven terrain without wasting time,"Robotica, Published online by Cambridge University Press: 19 September May.2025.</li>
-												<li>Youming Fan, Pengcheng Zeng,Xiaocheng Liu,Atsuo Yoshitaka,"Study on 3D image regeneration under limited computing resources,"IET Computer Vision, Vol.12, No.6, pp.817-825, Jan.2025.</li>
-												<li>Pengcheng Zeng and Atsuo Yoshitaka,"Visual Speech Recognition with Surrounding and Emotional Information,"IEEE International Symposium on Multimedia, Vol.12, Dec.2024.</li>
-												<Li>浅野 文彦, 瀬戸口 大樹, 曾 鹏程, 颜 聪, "片脚の駆動力を利用できない2脚ロボットの安定化制御と歩行支援技術への応用"計測自動制御学会論文集,Vol.53,No. 5,pp. 327-334,2024.</Li>
+												<li>Asano Fumihiko, <strong>Pengcheng Zeng</strong>, Ziyu Zhang, Cong Yan,"Methods of motion control and instantaneous gait analysis for safe walking on long uneven terrain without wasting time,"Robotica, Published online by Cambridge University Press: 19 September May.2025.</li>
+												<li>Youming Fan, <strong>Pengcheng Zeng</strong>,Xiaocheng Liu,Atsuo Yoshitaka,"Study on 3D image regeneration under limited computing resources,"IET Computer Vision, Vol.12, No.6, pp.817-825, Jan.2025.</li>
+												<li><strong>Pengcheng Zeng</strong> and Atsuo Yoshitaka,"Visual Speech Recognition with Surrounding and Emotional Information,"IEEE International Symposium on Multimedia, Vol.12, Dec.2024.</li>
+												<Li>浅野 文彦, 瀬戸口 大樹, <strong>曾 鹏程</strong>, 颜 聪, "片脚の駆動力を利用できない2脚ロボットの安定化制御と歩行支援技術への応用"計測自動制御学会論文集,Vol.53,No. 5,pp. 327-334,2024.</Li>
 											</ol>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">竞赛:</h4>
 											<p>CN-Celeb Visual Speech Recognition Competition 2024,第四名（前三分别是中国科学院大学，清华大学，中国科学院大学的队伍）</p>
@@ -100,7 +102,7 @@
 											<p>没什么特别的成就</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">技术支持:</h4>
 											<ul class="list-inline">
-												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">matlab</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">MATLAB</span></li>
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Python</span></li>
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Mathematica</span></li>
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">HTML/SASS</span></li>
@@ -123,7 +125,10 @@
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">成就:</h4>
 											<p>2022年优秀毕业生</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">技术支持:</h4>
-											<p>Nothing special.</p>
+											<ul class="list-inline">
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">Adobe illustrator</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">PowerPoint</span></li>
+											</ul>
 										</div><!--//resume-timeline-item-desc-->
 
 									</article><!--//resume-timeline-item-->
@@ -133,38 +138,142 @@
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
 												<h3 class="resume-position-title font-weight-bold mb-1">本科</h3>
-												<div class="resume-company-name ms-auto">山东科技大学</div>
+												<div class="resume-company-name ms-auto">山东科技大学 电气工程及其自动化学院</div>
 											</div><!--//row-->
 											<div class="resume-position-time">2016 - 2020</div>
 										</div><!--//resume-timeline-item-header-->
 										<div class="resume-timeline-item-desc">
-											<p>几乎可以说是荒废了4年</p>
-											<h4 class="resume-timeline-item-desc-heading font-weight-bold">成就：</h4>
+											<p>卢文隽副教授指导完成了基于Xrobot的自动分拣机器人设计。黄鹤松教授指导参加了全国电子设计大赛。于群教授指导了潮流计算仿真。</p>
+											<h4 class="resume-timeline-item-desc-heading font-weight-bold">项目：</h4>
 											<ol>
-												<li>全国电子设计大赛一等奖（只能说略有那么一点含金量）</li>
-												<li>大学生职业规划大赛省赛二等奖（毫无含金量以至于我甚至懒得去拿奖状）</li>
-												<li>山东省大学生辩论赛铜奖（也是毫无含金量）</li>
-												<li>RoboMaster校赛未出线（成员，极有含金量，因为打败我们的队伍代表国家在东亚赛区拿到了第二名，败于电子科技大学）</li>
+												<li>基于Xrobot的自动分拣机器人设计（毕业设计）</li>
+												<li>电压不稳时可以正常工作的阀门设计（电子设计大赛国赛）</li>
+												<li>使用多个温度传感器的联合仓内温度报警系统设计（电子设计大赛省赛）</li>
+												<li>具有世界时切换功能的数字电子钟设计（电子设计大赛校赛）</li>
+												<li>抚松北江水电站潮流计算仿真（课题研究）</li>
+											</ol>
+											<h4 class="resume-timeline-item-desc-heading font-weight-bold">竞赛:</h4>
+											<ol>
+												<li>全国电子设计大赛（全国大赛）：未入围</li>
+												<li>全国电子设计大赛（省赛）：一等奖</li>
+												<li>全国电子设计大赛（校赛）：一等奖</li>
+												<li>RoboMaster（校赛）：未出线（打败我们的队伍代表国家在东亚赛区拿到了第二名，败于电子科技大学）</li>
+												<li><del>其他一些杂项（山东省大学生辩论赛，全国职业规划大赛 .etc）</del></li>
 											</ol>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">技术支持:</h4>
 											<ul class="list-inline">
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">MCU language</span></li>
+												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">C#</span></li>
 											</ul>
 										</div><!--//resume-timeline-item-desc-->
-
 									</article><!--//resume-timeline-item-->
-
 								</div><!--//resume-timeline-->
-
-
 							</div>
 						</section><!--//experience-section-->
 					</div>
 
+
+
+					<div class="col-lg-3">
+					    <section class="resume-section skills-section mb-5">
+						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">技术 &amp; 工具</h2>
+						    <div class="resume-section-content">
+
+
+						        <div class="resume-skill-item">
+							        <h4 class="resume-skills-cat font-weight-bold">前端</h4>
+							        <ul class="list-unstyled mb-4">
+								        <li class="mb-2">
+								            <div class="resume-skill-name">HTML/CSS/SCSS/LESS</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 53%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+								        <li class="mb-2">
+								            <div class="resume-skill-name">JavaScript</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 71%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+								        <li class="mb-2">
+								            <div class="resume-skill-name">node.js</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 31%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>								        
+								        <li class="mb-2">
+								            <div class="resume-skill-name">Angular</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 15%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+								        <li class="mb-2">
+								            <div class="resume-skill-name">React</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 41%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+							        </ul>
+						        </div><!--//resume-skill-item-->
+						        
+						        <div class="resume-skill-item">
+						            <h4 class="resume-skills-cat font-weight-bold">后端</h4>
+							        <ul class="list-unstyled">
+								        <li class="mb-2">
+								            <div class="resume-skill-name">Python/Django</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+								        <li class="mb-2">
+								            <div class="resume-skill-name">Ruby/Rails</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 0%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+								        <li class="mb-2">
+								            <div class="resume-skill-name">PHP</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 0%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+								        <li class="mb-2">
+								            <div class="resume-skill-name">WordPress/Shopify</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 0%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+							        </ul>
+						        </div><!--//resume-skill-item-->
+
+								<div class="resume-skill-item">
+						            <h4 class="resume-skills-cat font-weight-bold">科学工具</h4>
+							        <ul class="list-unstyled">
+								        <li class="mb-2">
+								            <div class="resume-skill-name">MATLAB</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 87%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+								        <li class="mb-2">
+								            <div class="resume-skill-name">Mathematics</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 76%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+								        <li class="mb-2">
+								            <div class="resume-skill-name">Orange3</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 79%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+							        </ul>
+						        </div><!--//resume-skill-item-->
+
 					<section class="resume-section reference-section mb-5">
 						<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">奖项</h2>
 						<div class="resume-section-content">
-							<p class="mb-0">我看大家都写所以我也跟风写一个，但其实我没有获得过什么值得自满的奖项。</p>
+							<p class="mb-0"><del>我看大家都写所以我也跟风写一个，但其实我没有获得过什么值得自满的奖项。</del></p>
 						</div>
 					</section>
 
@@ -191,6 +300,23 @@
 						</div>
 					</section><!--//interests-section-->
 
+					<section class="resume-section interests-section mb-5">
+						<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">更多</h2>
+						<div class="resume-section-content">	
+							<p class="mb-0">如果想要了解更多关于我的内容，欢迎点击下面的按钮查看我的博客。请注意，<em><strong>这些文档并不总是面向非技术人员</em></strong>，这可能意味着某些文档需要依赖专业软件或者包，例如MATLAB，jupyter。</p>						
+							<ul>
+								<li class="mb-1"><a class="text-reset text-link" href="https://github.com/zpcxts" target="_blank">二足机器人</a></li>
+								<li class="mb-1"><a class="text-reset text-link" href="https://github.com/zpcxts" target="_blank">多模态唇读</a></li>
+								<li class="mb-1"><a class="text-reset text-link" href="https://github.com/zpcxts" target="_blank">分拣机器人</a></li>
+								<li class="mb-1"><a class="text-reset text-link" href="https://github.com/zpcxts" target="_blank">稳定阀门</a></li>
+								<li class="mb-1"><a class="text-reset text-link" href="https://github.com/zpcxts" target="_blank">温度报警器</a></li>
+								<li class="mb-1"><a class="text-reset text-link" href="https://github.com/zpcxts" target="_blank">数字电子钟</a></li>
+								<li class="mb-1"><a class="text-reset text-link" href="https://github.com/zpcxts" target="_blank">潮流计算</a></li>
+								<li class="mb-1"><a class="text-reset text-link" href="https://github.com/zpcxts" target="_blank">脑死亡</a></li>
+								<li class="mb-1"><a class="text-reset text-link" href="https://github.com/zpcxts" target="_blank">自动2048</a></li>
+							</ul>
+						</div>
+					</section><!--//interests-section-->
 				</div>
 			</div><!--//row-->
 			</div><!--//resume-body-->
