--- a/01_introduction/introduction-cn.html
+++ b/01_introduction/introduction-cn.html
@@ -99,7 +99,8 @@
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">竞赛:</h4>
 											<p>CN-Celeb Visual Speech Recognition Competition 2024,第四名（前三分别是中国科学院大学，清华大学，中国科学院大学的队伍）</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">成就:</h4>
-											<p>没什么特别的成就</p>
+											<p>2024年毕业生代表</p>
+											<p><del>没什么特别的成就</del></p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">技术支持:</h4>
 											<ul class="list-inline">
 												<li class="list-inline-item"><span class="badge bg-secondary badge-pill">MATLAB</span></li>
