--- a/01_introduction/introduction-cn.html
+++ b/01_introduction/introduction-cn.html
@@ -139,7 +139,7 @@
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
 												<h3 class="resume-position-title font-weight-bold mb-1">本科</h3>
-												<div class="resume-company-name ms-auto">山东科技大学 电气工程及其自动化学院</div>
+												<div class="resume-company-name ms-auto">山东大学 电气工程及其自动化学院</div>
 											</div><!--//row-->
 											<div class="resume-position-time">2016 - 2020</div>
 										</div><!--//resume-timeline-item-header-->
